--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "discord.js": "git+https://git@github.com/spinfal/discord.js.git",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
-    "express-fileupload": "^1.3.1"
+    "express-fileupload": "^1.3.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
