--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
-    "discord.js": "git+https://git@github.com/spinfal/discord.js.git",
+    "discord.js": "12.5.3",
     "ejs": "^3.1.9",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.1",
