--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Upload to Discord's CDN without having to use the Discord app.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tailwindcss -i ./development/tailwind.css -o ./public/css/index.css -m && node app.js",
-    "dev": "nodemon app.js"
+    "build-css": "npx tailwindcss -i ./development/tailwind.css -o ./public/css/index.css -m",
+    "start": "node app.js",
+    "watch-node": "nodemon app.js",
+    "dev": "npm run build-css && npm run watch-node"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
-    "discord.js": "git+https://git@github.com/spinfal/discord.js.git",
+    "discord.js": "12.5.3",
     "ejs": "^3.1.9",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
