--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
   },
   "homepage": "https://github.com/spinfal/cdn-slave#readme",
   "dependencies": {
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "discord.js": "12.5.3",
     "ejs": "^3.1.9",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.2",
+    "knex": "^3.1.0",
     "moment": "^2.29.4",
-    "moment-timezone": "^0.5.43"
+    "moment-timezone": "^0.5.43",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
